hphp/hack/test/typecheck/super_constraint_11.php.exp
File "super_constraint_11.php", line 22, characters 19-33:
Invalid argument (Typing[4323])
  File "super_constraint_11.php", line 14, characters 23-23:
  `T` is a constrained type parameter
  File "super_constraint_11.php", line 14, characters 31-42:
  This type constraint is violated
  File "super_constraint_11.php", line 11, characters 37-51:
  Expected `NotWidgetParent`
  File "super_constraint_11.php", line 14, characters 31-42:
  But got `WidgetParent`
